module(
    name = "npm_extract_debug",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "rules_nodejs", version = "6.0.5")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
